tests/ui/pub/pub-ident-fn-3.stderr
error: missing `struct` for struct definition
  --> $DIR/pub-ident-fn-3.rs:4:8
   |
LL |     pub bar();
   |        ^
   |
help: add `struct` here to parse `bar` as a public struct
   |
LL |     pub struct bar();
   |         ++++++

error: aborting due to previous error

